Fix img.alignleft margins

--- a/style.scss
+++ b/style.scss
@@ -117,7 +117,7 @@ img {
 img.alignleft {
   float: left;
   width: 50%;
-  margin: 0 0 10px 10px;
+  margin: 10px 10px 0 0;
 }
 img.alignright {
   float: right;
